Adding Life Segment

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  
  <div class= "mainContainer">
 
- /*  */
+ <!-- Image here later --> 
    
   <div class= "paragraph1">
     <h3> About Me </h3>
@@ -51,6 +51,39 @@
     <h3> Life synompis</h3>
   
     <p>
+     I was born in Hunan China and adopted at the age of three and a half. 
+     Due to speaking some chinese as a child my parents where keen on 
+     making sure I did not loose that skill. At 21 years old now my listening 
+     comprehension is near fulent with my other three skills leaving a bit to
+     be desired as I have had little practice since high school. Growing up I
+     was fortunate to be exposed to many different activies from art classes 
+     to chinese dancing to tennis lessons. These experince taught me how to 
+     learn different types of skills and knowing how I learn best as an 
+     individual. 
+     <br> <br>
+     At age 12 my mother passed away from heart cancer. This had a huge impact 
+     on my life as she was my main care taker. Soon after her passing my father 
+     started a six year traveling mania. Every break I had during middle school 
+     and high school, he would take me on eye opening vacations where we travled 
+     the world. Seeing what other people live through and what their normal life 
+     routine are made me truly value the life I had. During this time I was drawn
+     to Japanese animation to the point it led me to taking Japanese language classes
+     at the local community college COD. I made decent progress during that one
+     semester and can say that learning languages is a low-key hobby of mine but it
+     is hard to self teach a language with no one to practice with. 
+     <br> <br>
+     After graduating high school with honors I moved to Boston to attend Simmons 
+     University. I originally chose this school as I thought an all women learning 
+     envirnment would be the best way to start my higher education career since 
+     computer science is a male dominated field. After the first year this turned out 
+     not to be the case so I took the down time during COVID-19 to sit down and ask 
+     myself what I wanted my future to look like. I realized that sitting down and 
+     coding all day was not a long term goal. The idea of a dual major popped in my head. 
+     With that in mind I searched for a school in the area that offered that type of 
+     schooling. That is when I stumbled Northeastern University. It was a perfect match 
+     for both location and academic excellence so I applied immediately and was elated 
+     to be accepted as a transfer student. I am now in the third year and have really
+     enjoyed my time at the university. .....
      -only stuff past a year ago
      -early life
      -travel
@@ -87,37 +120,37 @@
      more detail as to what excatly makes those two very different interest 
      become my passion. 
      <br> <br>
-     I hope the layout and small details of this website (when finished) can 
-     in part show that web development is something I am truly passionate about.
+     I hope the layout and small details of this website (when finished) 
+     can in part show that web development is something I am truly 
+     passionate about.
      <br> <br>
-     Both my grandmother and mother have been very artisitic and distilled it's 
-     value in me when I was younger. At that time the more traditional way of
-     creating art never appealed to me. It was almost a bit too open ended 
-     for me and if I made mistake, it often meant I would have to start over
-     as arcylic paint is not the most forgiving medium. Web design on the other
-     hand is quite the oppsite. One can simply remove a line of code or go back
-     to an older version of the site to undo any mistakes. It is a more forgiving 
-     process in that aspect. It also mixes coding into the mix that makes it a 
-     more modern art form. Being in my early 20s this is an undienable plus since it 
-     makes me feel like my work can be appercaited by my peers and has real utility 
-     to it. 
+     Both my grandmother and mother have been very artisitic and distilled 
+     it's value in me when I was younger. At that time the more traditional 
+     way of creating art never appealed to me. It was almost a bit too open 
+     ended for me and if I made mistake, it often meant I would have to start 
+     over as arcylic paint is not the most forgiving medium. Web design on the 
+     other hand is quite the oppsite. One can simply remove a line of code or 
+     go back to an older version of the site to undo any mistakes. It is a more 
+     forgiving process in that aspect. It also mixes coding into the mix that 
+     more modern art form. Being in my early 20s this is an undienable plus 
+     since it makes me feel like my work can be appercaited by my peers and has 
+     real utility to it. 
      <br> <br>
-     The second passion of mine is less techinally driven interest. Taking ecology 
-     and biology classes in high school made me look at the natrual world with a 
-     more critical eye. Instead of thinking an animal looked odd or bazzar, I 
-     started to wonder why they looked the way they did and if it was the 
-     environment or its place in the food chain. As I got older this curisoity 
-     turned to why humans are the way we are and our evolutionary journey and its 
-     place in the current time period. As more information closly gets uncovered and 
-     piece of our past has been put together it really presents an intriguing story 
-     of where we came from as a speicies. Learning about this kind of science has 
-     really helped me put things into perspective and feel more connected with the 
-     world. I know these are quite __ statements but I think someone's passion/hobby 
-     should help people feel more present and connected to their spot in the world 
-     and for me, learning about "life's" past does that for me. 
-     <br> <br>
-     On a lighter note if you ever learn more about bugs, you'll find that they truly 
-     are the aliens that roam along side us!
+     The second passion of mine is less techinally driven interest. Taking 
+     ecology and biology classes in high school made me look at the natrual 
+     world with a more critical eye. Instead of thinking an animal looked 
+     odd or bazzar, I started to wonder why they looked the way they did and 
+     if it was the environment or its place in the food chain. As I got older 
+     this curisoity turned to why humans are the way we are and our evolutionary 
+     journey and its place in the current time period. As more information closly 
+     gets uncovered and piece of our past has been put together it really presents 
+     an intriguing story of where we came from as a speicies. Learning about this 
+     kind of science has really helped me put things into perspective and feel more 
+     connected with the world. I know these are quite __ statements but I think 
+     someone's passion/hobby should help people feel more present and connected to 
+     their spot in the world and for me, learning about "life's" past does that 
+     for me. On a lighter note if you ever learn more about bugs, you'll find that 
+     they truly are the aliens that roam along side us!
     </p>
   </div>
   
