--- a/index.html
+++ b/index.html
@@ -83,12 +83,7 @@
      schooling. That is when I stumbled Northeastern University. It was a perfect match 
      for both location and academic excellence so I applied immediately and was elated 
      to be accepted as a transfer student. I am now in the third year and have really
-     enjoyed my time at the university. .....
-     -only stuff past a year ago
-     -early life
-     -travel
-     -language
-     -activities I did 
+     enjoyed my time at the university. ..... <br>
      -things that set up the stuff that has happened in the last year
     </p>
   </div>
