--- a/references.html
+++ b/references.html
@@ -38,7 +38,7 @@
          <p> Company Name </p>
          <p class= "contact"> Contact Information: </p>
          <p> email <br> number </p> 
-         <p> relation <br> </p>
+         <p> Relation <br> </p>
        </div>
     </div>
     
