Finishing the life section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
      was fortunate to be exposed to many different activies from art classes 
      to chinese dancing to tennis lessons. These experince taught me how to 
      learn different types of skills and knowing how I learn best as an 
-     individual. 
+     individual. At a young age I was diagnosed with OCD and dyslexia. These
+     two issues took years to overcome. With a couple years of theropy and four
+     years in the Willison program, I was able to mostly overcome both set backs.
+     I can contribute the early action to my mother who was very attentive and 
+     saw my obessive behavior as a child. 
      <br> <br>
      At age 12 my mother passed away from heart cancer. This had a huge impact 
      on my life as she was my main care taker. Soon after her passing my father 
@@ -73,18 +77,24 @@
      is hard to self teach a language with no one to practice with. 
      <br> <br>
      After graduating high school with honors I moved to Boston to attend Simmons 
-     University. I originally chose this school as I thought an all women learning 
-     envirnment would be the best way to start my higher education career since 
-     computer science is a male dominated field. After the first year this turned out 
-     not to be the case so I took the down time during COVID-19 to sit down and ask 
-     myself what I wanted my future to look like. I realized that sitting down and 
-     coding all day was not a long term goal. The idea of a dual major popped in my head. 
-     With that in mind I searched for a school in the area that offered that type of 
-     schooling. That is when I stumbled Northeastern University. It was a perfect match 
-     for both location and academic excellence so I applied immediately and was elated 
-     to be accepted as a transfer student. I am now in the third year and have really
-     enjoyed my time at the university. ..... <br>
-     -things that set up the stuff that has happened in the last year
+     University. I originally chose the school as I thought an all women learning 
+     envirnment would be the best way to start my higher education career due to the
+     fact computer science industry is a male dominated field. Being with women may
+     have allowed me to feel more comfortable and let me be more active in the classes.
+     After the first year this turned out not to be the case so I took the down time 
+     during COVID-19 to sit down and ask myself what I wanted my future to look like. 
+     I realized that sitting down and coding all day was as desireable of a goal then 
+     I orginally thought- I wanted more varity and opportunity. The idea of a dual major 
+     popped in my head. With that in mind I searched for a school in the area that 
+     offered that type of schooling. That is when I stumbled Northeastern University. 
+     It was a perfect match for both location and academic excellence so I applied 
+     immediately and was elated to be accepted as a transfer student. I am now in the 
+     third year and have really enjoyed my time at the university. Taking the 
+     foundational courses it became clear that front ended jobs would be a better fit 
+     for me since seeing the direct impact of my code if a more fulfilling process. 
+     I am a more visual learner, so this also makes a better fit for me as a student. 
+     This brings things up to present day. I look forward to whatever opportunities 
+     that come my way and to make the most of those experinces. 
     </p>
   </div>
 
