Fixed typo for 3

--- a/references.html
+++ b/references.html
@@ -62,7 +62,7 @@
         <p> McAninch Arts Center </p>
         <p class= "contact"> Contact Information: </p>
         <p> nardinir@cod.edu <br> 630.xxx.2100 </p> 
-        <p> He was my boss during my other summer job in 2021. <br> This experince help me learned more about customer service. </p>
+        <p> He was my boss during my other summer job in 2021. <br> This experince helped me learn more about customer service. </p>
       </div>
     </div>
     
