Fixing typos for life section

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
      After the first year this turned out not to be the case so I took the down time 
      during COVID-19 to sit down and ask myself what I wanted my future to look like. 
      I realized that sitting down and coding all day was as desireable of a goal then 
-     I orginally thought- I wanted more varity and opportunity. The idea of a dual major 
+     orginally thought- I wanted more varity and opportunity. The idea of a dual major 
      popped in my head. With that in mind I searched for a school in the area that 
-     offered that type of schooling. That is when I stumbled Northeastern University. 
+     offered that type of schooling. That is when I stumbled upon Northeastern University. 
      It was a perfect match for both location and academic excellence so I applied 
      immediately and was elated to be accepted as a transfer student. I am now in the 
      third year and have really enjoyed my time at the university. Taking the 
