Added career sections

--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
    
   <div class= "paragraph1">
     <h3> About Me </h3>
-    
-    <p class="centeredp"> I am 21 year old student living in Boston. I orginally 
-     am from Illinois in the ChicagoLand area. 
+    <p> 
+     I am 21 year old student living in Boston. I orginally am from Illinois in 
+     the ChicagoLand area. 
      - stuff that happened in the last year/ what I want to do in the future
     </p>
   </div>
  
   <div class= "paragraph2">
-    <h3> Life synompis</h3>
-  
+    <h3> Life Synompis</h3>
     <p>
      I was born in Hunan China and adopted at the age of three and a half. 
      Due to speaking some chinese as a child my parents where keen on 
@@ -72,9 +71,9 @@
      the world. Seeing what other people live through and what their normal life 
      routine are made me truly value the life I had. During this time I was drawn
      to Japanese animation to the point it led me to taking Japanese language classes
-     at the local community college COD. I made decent progress during that one
-     semester and can say that learning languages is a low-key hobby of mine but it
-     is hard to self teach a language with no one to practice with. 
+     at the local community college, College Of DuPage. I made decent progress during 
+     that one semester and can say that learning languages is a low-key hobby of 
+     mine but it is hard to self teach a language with no one to practice with. 
      <br> <br>
      After graduating high school with honors I moved to Boston to attend Simmons 
      University. I originally chose the school as I thought an all women learning 
@@ -98,36 +97,38 @@
     </p>
   </div>
 
-  <div class= "paragraph4">
+  <div class= "paragraph3">
     <h3> Career Aspirations </h3>
     <p> 
-     Lorem ipsum dolor sit amet, mea no elitr consulatu. 
-    Vis assentior voluptaria definitiones ut, mel lucilius 
-    forensibus eu. Sit apeirian maiestatis at. Ex eripuit 
-    molestiae vix. Ea omnesque conceptam mei. Cum laudem 
-    volutpat eu, id ius tota mollis aliquando. Sint persecuti 
-    sit in, sit at latine erroribus scribentur. Ut dicant integre 
-    maiestatis mel. Senserit expetenda duo ea. Eum et suas dictas,
-     insolens tractatos duo te. Te invenire instructior vel, 
-     imperdiet conclusionemque id pro, graeco salutatus liberavisse 
-     at quo. Sit mutat dolor ex. Ut quando dolore pro, an sumo quaestio 
-     scripserit vis. Malis apeirian periculis per ne, eu primis scaevola 
-     salutatus pri, et his ornatus tincidunt.
+     There is still so many aspects of the world I have no idea about have little
+     knowledge of. It makes it hard to know exactly what I want and impossible to 
+     know how my life will play out. Knowing this, I can say that I am open minded
+     about this process. Being a dual major student there are many opportunities 
+     and routes for me. Working on front end deveopment would be an amazing start
+     as I have always wanted a more techical job. To be apart of a larger project
+     that many customers or business use is a role I would love to be apart of. If
+     that doesn't work out I still am interested in fintech as it combines technology 
+     and finance (my concentration). Being able to use my other half of my major, 
+     business administration is also a great opportunity. Jobs such as: .... . 
+     Ideally I would love to be able use both my majors in whatever position I am in.
+     Not only would this be a rare case of actually getting a job related to what I
+     went to school for, it would also a perfect fit as it could technical while
+     simultaneously... 
+     
      </p>
   </div>
   
-    <div class= "paragraph3">
+    <div class= "paragraph4">
     <h3> Passions </h3>
     <p> 
-     As I have entered the young adult stage of my life there where two 
-     distinct topics that really drew my attention. The first being web 
-     development/design and the second one being evolution. I will go into
-     more detail as to what excatly makes those two very different interest 
-     become my passion. 
+     As I have entered the young adult stage of my life there where two distinct 
+     topics that really drew my attention. The first being web development/design 
+     and the second one being evolution. I will go into more detail as to what 
+     excatly makes those two very different interest become my passion. 
      <br> <br>
      I hope the layout and small details of this website (when finished) 
-     can in part show that web development is something I am truly 
-     passionate about.
+     can in part show that web development is something I am truly passionate 
+     about.
      <br> <br>
      Both my grandmother and mother have been very artisitic and distilled 
      it's value in me when I was younger. At that time the more traditional 
@@ -138,8 +139,8 @@
      go back to an older version of the site to undo any mistakes. It is a more 
      forgiving process in that aspect. It also mixes coding into the mix that 
      more modern art form. Being in my early 20s this is an undienable plus 
-     since it makes me feel like my work can be appercaited by my peers and has 
-     real utility to it. 
+     since it makes me feel like my work can be appercaited by my peers and 
+     has real utility to it. 
      <br> <br>
      The second passion of mine is less techinally driven interest. Taking 
      ecology and biology classes in high school made me look at the natrual 
