--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
      to Japanese animation to the point it led me to taking Japanese language classes
      at the local community college, College Of DuPage. I made decent progress during 
      that one semester and can say that learning languages is a low-key hobby of 
-     mine but it is hard to self teach a language with no one to practice with. 
+     mine but it is challenging to self teach a language with no one to practice with. 
      <br> <br>
      After graduating high school with honors I moved to Boston to attend Simmons 
      University. I originally chose the school as I thought an all women learning 
@@ -112,8 +112,8 @@
      business administration is also a great opportunity. Jobs such as: .... . 
      Ideally I would love to be able use both my majors in whatever position I am in.
      Not only would this be a rare case of actually getting a job related to what I
-     went to school for, it would also a perfect fit as it could technical while
-     simultaneously... 
+     went to school for, it could be a role where I still need some technical skill  
+     while simultaneously having a more administrative role.  
      
      </p>
   </div>
