--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
  </div>
  
  <script>
-  const topbar = document.querySelector('#topbar');
-  let top = topbar.offsetTop;
+  const topbar = document.querySelector("#topbar");
+  top = topbar.offsetTop;
   
   function stickyTopbar() {
    if (window.scrollY >= top) {
