Adding caps note

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <h3> About Me </h3>
     <p> 
      I am 21 year old student living in Boston. I orginally am from Illinois in 
-     the ChicagoLand area. 
-     - stuff that happened in the last year/ what I want to do in the future
+     the ChicagoLand area. <br> CURRENTLY NOTHING HAS BEEN EDITED/PEER EDITED
+     <br> - stuff that happened in the last year/ what I want to do in the future
     </p>
   </div>
  
