--- a/references.html
+++ b/references.html
@@ -43,7 +43,7 @@
     </div>
     
     <div class= "secondReference">
-      <img class= "img2" id= "img2" src= "images/DuPageFoundation_Logo.png" alt= "DuPage Foundation image" />
+      <img class= "img2" id= "img2" src= "images/DuPage-Foundation.jpeg" alt= "DuPage Foundation image" />
       <div class= "container2" onmouseover="oChange2('0.2')" onmouseout="oChange2('0.5')">
         <h4> Barbara Szczepaniak </h4>
         <p> Vice President for Programs </p>  
