--- a/resume.html
+++ b/resume.html
@@ -28,6 +28,8 @@
         <h1> My Resumes </h1>
         <p> Due to the fact I am a dual major student, I take both computer science and business administration cources. <br>
             Therefore, I have made two resumes to better display my skills and knowledge. 
+            
+            <button class= "btn"> More Info </button> 
         </p>
         
         <!-- Setting up the 2x2 table for the resume and their respective titles -->
