--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
             Therefore, I have made two resumes to better display my skills and knowledge.
         </p>
         
-        <button class= "btn"> More Info </button> 
+        <button class= "btn"> <em> More Info </em> </button> 
         
         <!-- Setting up the 2x2 table for the resume and their respective titles -->
         <table>
