--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
         <p> Due to the fact I am a dual major student, I take both computer science and business administration cources. <br>
             Therefore, I have made two resumes to better display my skills and knowledge.
             
-            <button class= "btn"> <em> More Info </em> </button> 
+            <button href= "info.html" class= "btn"> <em> More Info </em> </button> 
         </p>
         
         <!-- Setting up the 2x2 table for the resume and their respective titles -->
