--- a/info.html
+++ b/info.html
@@ -4,6 +4,26 @@
     <title> Info Page </title>
   </header>
   <body>
-    
+    <table>
+      <tr>
+        <th> Name </th>
+        <th> Description </th>
+        <th> Link to Project </th> 
+      </tr>
+      <tr>
+        <td> Marble Solitaire </td>
+      </tr> 
+      <tr> 
+        <td> Image Processor </td>
+      </tr> 
+      <tr>
+        <td> China's Economy </td>
+      </tr>
+      <tr>
+        <td> Chain Expansion </td>
+      </tr>
+      <tr>
+        <td> Country Study </td> 
+      </tr> 
   </body>
 </html> 
