--- a/info.html
+++ b/info.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <header>
+    <!-- connecting the css file to the html file -->
+    <link rel="stylesheet" href="css/info.css"> 
+    
     <title> Info Page </title>
   </header>
   <body>
