Adding go back button

--- a/info.html
+++ b/info.html
@@ -7,6 +7,8 @@
     <title> Info Page </title>
   </header>
   <body>
+    <h2> Further Breakdown Of Projects </h2>
+    <button class= "btn" onclick= "resume.html"> <em> Go Back </em> </button>
     <table>
       <tr>
         <th> Name </th>
