--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
   </header>
   <body>
     <h2> Further Breakdown Of Projects </h2>
-    <button class= "btn" onclick= "resume.html"> <em> Go Back </em> </button>
+    <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button>
     <table>
       <tr>
         <th> Name </th>
