Adding thank you message

--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
     </p>
   </div>
   
+  <p> 
+   Thank you so much for getting this far! 
+   If you are an employer please check out my resume page as there is more information regarding my skills, knowledge, and experience.
+  </p>
+  
  </div>
  
  <script>
@@ -175,7 +180,6 @@
   }
   
   window.addEventListener("scroll", stickyTopbar);
-  
  </script> 
 </body>
 </html>
