Added tyNote class

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </p>
   </div>
   
-  <p> 
+  <p class= "tyNote"> 
    Thank you so much for getting this far! 
    If you are an employer please check out my resume page as there is more information regarding my skills, knowledge, and experience.
   </p>
