--- a/info.html
+++ b/info.html
@@ -7,8 +7,8 @@
     <title> Info Page </title>
   </header>
   <body>
-    <h2> Further Breakdown Of Projects </h2>
-    <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button>
+    <h2> Further Breakdown Of Projects  <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button> </h2>
+   
     <table>
       <tr>
         <th> Name </th>
