--- a/references.html
+++ b/references.html
@@ -50,7 +50,7 @@
         <p> DuPage Foundation </p>
         <p class= "contact"> Contact Information: </p>
         <p> barb@dupagefoundation.org <br> 630.xxx.5280 </p> 
-        <p> She was my boss during my summer internship in 2021. More information is on my resume. </p>
+        <p> She was my boss during my summer internship in 2021. <br> More information is on my resume. </p>
       </div> 
     </div>
     
