Adding classes for th

--- a/info.html
+++ b/info.html
@@ -11,9 +11,9 @@
    
     <table>
       <tr>
-        <th> Name </th>
-        <th> Description </th>
-        <th> Link to Project </th> 
+        <th class= "header1"> Name </th>
+        <th class= "header2"> Description </th>
+        <th class= "header3"> Link to Project </th> 
       </tr>
       <tr>
         <td> Marble Solitaire </td>
