--- a/info.html
+++ b/info.html
@@ -10,24 +10,24 @@
     <h2> Further Breakdown Of Projects  <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button> </h2>
    
     <table>
-      <tr>
+      <tr class= "row1">
         <th class= "header1"> Name </th>
         <th class= "header2"> Description </th>
         <th class= "header3"> Link to Project </th> 
       </tr>
-      <tr>
+      <tr class= "row2">
         <td> Marble Solitaire </td>
       </tr> 
-      <tr> 
+      <tr class= "row3"> 
         <td> Image Processor </td>
       </tr> 
-      <tr>
+      <tr class= "row4">
         <td> China's Economy </td>
       </tr>
-      <tr>
+      <tr class= "row5">
         <td> Chain Expansion </td>
       </tr>
-      <tr>
+      <tr class= "row6">
         <td> Country Study </td> 
       </tr> 
     </table> 
