--- a/info.html
+++ b/info.html
@@ -18,12 +18,12 @@
       <tr class= "row1">
         <td> Marble Solitaire </td>
         <td> </td>
-        <td> <img class = "link1" id= "link1" src= "images/Link.jpeg" alt= "Link1" /> </td>
+        <td> <img class = "link1" id= "link1" src= "images/Link.jpeg" alt= "Link1" onclick= "https://github.com/Meixia-S/Marble-Solitaire-Game" /> </td>
       </tr> 
       <tr class= "row2"> 
         <td> Image Processor </td>
         <td> </td>
-        <td> <img class = "link2" id= "link2" src= "images/Link.jpeg" alt= "Link2" /> </td>
+        <td> <img class = "link2" id= "link2" src= "images/Link.jpeg" alt= "Link2" onclick= "https://github.com/Meixia-S/Image-Processor" /> </td>
       </tr> 
       <tr class= "row3">
         <td> China's Economy </td>
