--- a/info.html
+++ b/info.html
@@ -7,6 +7,7 @@
     <title> Info Page </title>
   </header>
   <body>
+    <div class= "gradient"> </div> 
     <h2> Further Breakdown Of Projects  <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button> </h2>
    
     <table>
