--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
      This brings things up to present day. I look forward to whatever opportunities 
      that come my way and to make the most of those experinces. 
     </p>
-  </div>
+   </div>
 
-  <div class= "paragraph3">
+   <div class= "paragraph3">
     <h3> Career Aspirations </h3>
     <p> 
      There is still so many aspects of the world I have no idea about have little
@@ -114,11 +114,10 @@
      Not only would this be a rare case of actually getting a job related to what I
      went to school for, it could be a role where I still need some technical skill  
      while simultaneously having a more administrative role.  
-     
-     </p>
-  </div>
+    </p>
+   </div>
   
-    <div class= "paragraph4">
+   <div class= "paragraph4">
     <h3> Passions </h3>
     <p> 
      As I have entered the young adult stage of my life there where two distinct 
@@ -158,15 +157,17 @@
      for me. On a lighter note if you ever learn more about bugs, you'll find that 
      they truly are the aliens that roam along side us!
     </p>
-  </div>
+   </div>
   
-  <p class= "tyNote"> 
-   Thank you so much for getting this far! 
-   If you are an employer please check out my resume page as there is more information regarding my skills, knowledge, and experience.
-  </p>
-  
+   <div class= "tyNote>
+    <h3> Thank You </h3> 
+   <p> 
+    Thank you so much for getting this far! 
+    If you are an employer please check out my resume page as there is more information regarding my skills, knowledge, and experience.
+   </p>
+  </div>              
  </div>
- 
+                
  <script>
   var topbar = document.getElementById("topbar");
   var top = topbar.offsetTop;
