--- a/info.html
+++ b/info.html
@@ -19,27 +19,27 @@
       <tr class= "row1">
         <td> Marble Solitaire </td>
         <td> </td>
-        <td align= "center> <img src= "images/Link.png" alt= "Link1" onclick= "https://github.com/Meixia-S/Marble-Solitaire-Game" /> </td>
+        <td align= "center"> <img src= "images/Link.png" alt= "Link1" onclick= "https://github.com/Meixia-S/Marble-Solitaire-Game" /> </td>
       </tr> 
       <tr class= "row2"> 
         <td> Image Processor </td>
         <td> </td>
-        <td align= "center> <img src= "images/Link.png" alt= "Link2" onclick= "https://github.com/Meixia-S/Image-Processor" /> </td>
+        <td align= "center"> <img src= "images/Link.png" alt= "Link2" onclick= "https://github.com/Meixia-S/Image-Processor" /> </td>
       </tr> 
       <tr class= "row3">
         <td> China's Economy </td>
         <td> </td>
-        <td align= "center> <img src= "images/Link.png" alt= "Link3" /> </td>
+        <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
       </tr>
       <tr class= "row4">
-        <td align= "center> Chain Expansion </td>
+        <td align= "center"> Chain Expansion </td>
         <td> </td>
         <td> <img src= "images/Link.png" alt= "Link4" /> </td>
       </tr>
       <tr class= "row5">
         <td> Country Study </td> 
         <td> </td>
-        <td align= "center> <img src= "images/Link.png" alt= "Link5" /> </td>
+        <td align= "center"> <img src= "images/Link.png" alt= "Link5" /> </td>
       </tr> 
     </table> 
   </body>
