--- a/info.html
+++ b/info.html
@@ -32,9 +32,9 @@
         <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
       </tr>
       <tr class= "row4">
-        <td align= "center"> Chain Expansion </td>
+        <td> Chain Expansion </td>
         <td> </td>
-        <td> <img src= "images/Link.png" alt= "Link4" /> </td>
+        <td align= "center"> <img src= "images/Link.png" alt= "Link4" /> </td>
       </tr>
       <tr class= "row5">
         <td> Country Study </td> 
