--- a/info.html
+++ b/info.html
@@ -7,7 +7,8 @@
     <title> Info Page </title>
   </header>
   <body>
-    <div class= "gradient"> </div> 
+    <div class= "gradient">
+      
     <h2> Further Breakdown Of Projects  <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button> </h2>
    
     <table>
@@ -42,5 +43,6 @@
         <td align= "center"> <img src= "images/Link.png" alt= "Link5" /> </td>
       </tr> 
     </table> 
+    </div> 
   </body>
 </html> 
