--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
       
     <h2> Further Breakdown Of Projects  <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button> </h2>
    
-    <table>
+    <table align= "center">
       <tr class= "row0">
         <th class= "header1"> Name </th>
         <th class= "header2"> Description </th>
