Adding first discription

--- a/info.html
+++ b/info.html
@@ -19,7 +19,9 @@
       </tr>
       <tr class= "row1">
         <td> Marble Solitaire </td>
-        <td> </td>
+        <td> <p> A fun marble solitaire game with three different board shapes to chose from. This was made with the view, model, and controller set up.
+                 The view only deals with what the view sees (ie the user interface), while the controller deals with processing user input, and the model
+                 handles the game logic and functions. This keeps the code very easy to read and to edit in the future. ... </p> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link1" onclick= "https://github.com/Meixia-S/Marble-Solitaire-Game" /> </td>
       </tr> 
       <tr class= "row2"> 
