--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </p>
    </div>
   
-   <div class= "tyNote>
+   <div class= "tyNote">
     <h3> Thank You </h3> 
    <p> 
     Thank you so much for getting this far! 
