--- a/info.html
+++ b/info.html
@@ -11,13 +11,13 @@
       
     <h2> Further Breakdown Of Projects  <button class= "btn" onclick= "window.location.href = 'resume.html';"> <em> Go Back </em> </button> </h2>
    
-    <table align= "center">
-      <tr class= "row0">
+    <table class= "table" align= "center">
+      <tr>
         <th class= "header1"> Name </th>
         <th class= "header2"> Description </th>
         <th class= "header3"> Link to Project </th> 
       </tr>
-      <tr class= "row1">
+      <tr>
         <td> Marble Solitaire </td>
         <td> <p> A fun marble solitaire game with three different board shapes to chose from. 
             <br> This was made with the view, model, and controller set up. The view only 
@@ -27,22 +27,22 @@
             <br> ... </p> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link1" onclick= "https://github.com/Meixia-S/Marble-Solitaire-Game" /> </td>
       </tr> 
-      <tr class= "row2"> 
+      <tr> 
         <td> Image Processor </td>
         <td> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link2" onclick= "https://github.com/Meixia-S/Image-Processor" /> </td>
       </tr> 
-      <tr class= "row3">
+      <tr>
         <td> China's Economy </td>
         <td> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
       </tr>
-      <tr class= "row4">
+      <tr>
         <td> Chain Expansion </td>
         <td> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link4" /> </td>
       </tr>
-      <tr class= "row5">
+      <tr>
         <td> Country Study </td> 
         <td> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link5" /> </td>
