--- a/info.html
+++ b/info.html
@@ -24,12 +24,27 @@
             <br> deals with what the view sees (ie the user interface), while the controller 
             <br> deals with processing user input, and the model handles the game logic and 
             <br> functions. This keeps the code very easy to read and to edit in the future. 
-            <br> ... </p> </td>
+            <br> ... 
+          </p> 
+        </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link1" onclick= "https://github.com/Meixia-S/Marble-Solitaire-Game" /> </td>
       </tr> 
       <tr> 
         <td> Image Processor </td>
-        <td> </td>
+        <td> <p> A fun marble solitaire game with three different board shapes to chose from. 
+            <br> This is a image processor program that allows you load, edit, and save 
+            <br> images (supports: jpg, png, bmp, ppm3). There are three different ways to 
+            <br> use the program: 1. through the shell via text commands
+            <br>                  2. through the terminal/scripts
+            <br>                  3. the GUI (recommended)
+            <br> For more information about the inner workings of the program please read the
+            <br> README provided. The file will give a more detailed explanation about why I 
+            <br> designed the program in the format that I did and how to use it. 
+            <br> Unlike the previous project mentioned above, this assignment was more open
+            <br> ended as students had more freedom over the design. The only requirements 
+            <br> where to make sure that all the features where working as intended. 
+          </p> 
+        </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link2" onclick= "https://github.com/Meixia-S/Image-Processor" /> </td>
       </tr> 
       <tr>
