Adding br class

--- a/info.html
+++ b/info.html
@@ -35,8 +35,8 @@
             <br> This is a image processor program that allows you load, edit, and save 
             <br> images (supports: jpg, png, bmp, ppm3). There are three different ways to 
             <br> use the program: 1. through the shell via text commands
-            <br>                  2. through the terminal/scripts
-            <br>                  3. the GUI (recommended)
+            <br class= "spacing1"> 2. through the terminal/scripts
+            <br class= "spacing2"> 3. the GUI (recommended)
             <br> For more information about the inner workings of the program please read the
             <br> README provided. The file will give a more detailed explanation about why I 
             <br> designed the program in the format that I did and how to use it. 
