--- a/info.html
+++ b/info.html
@@ -20,6 +20,9 @@
       <tr>
         <td> Marble Solitaire </td>
         <td> <p> A fun marble solitaire game with three different board shapes to chose from. 
+            <br> The shapes are English, European, and Triangle. If you would like to play a 
+            <br> game, simply download the code and create a configuration. The format should 
+            <br> be (board shapre, , ,). 
             <br> This was made with the view, model, and controller set up. The view only 
             <br> deals with what the view sees (ie the user interface), while the controller 
             <br> deals with processing user input, and the model handles the game logic and 
@@ -31,15 +34,14 @@
       </tr> 
       <tr> 
         <td> Image Processor </td>
-        <td> <p> A fun marble solitaire game with three different board shapes to chose from. 
-            <br> This is a image processor program that allows you load, edit, and save 
+        <td> <p> This is a image processor program that allows you load, edit, and save 
             <br> images (supports: jpg, png, bmp, ppm3). There are three different ways to 
             <br> use the program: 1. through the shell via text commands
             <br class= "spacing1"> 2. through the terminal/scripts
             <br class= "spacing2"> 3. the GUI (recommended)
-            <br> For more information about the inner workings of the program please read the
-            <br> README provided. The file will give a more detailed explanation about why I 
-            <br> designed the program in the format that I did and how to use it. 
+            <br> For more information about the inner workings of the program please read
+            <br> the README provided. The file will give a more detailed explanation about 
+            <br> why I designed the program in the format that I did and how to use it. 
             <br> Unlike the previous project mentioned above, this assignment was more open
             <br> ended as students had more freedom over the design. The only requirements 
             <br> where to make sure that all the features where working as intended. 
@@ -49,14 +51,25 @@
       </tr> 
       <tr>
         <td> China's Economy </td>
-        <td> </td>
+        <td> <p> This project focus was to research another country's macro economy, convert 
+            <br> data into graphs, and analize those graphs to determine the strenghts and 
+            <br> weaknesses of their ecnomy. This project was done in stages during the 
+            <br> entire semester and at the end we needed to present our findinds to the 
+            <br> class. Due to the fact I took the course during COVID, the presentation is 
+            <br> a prerecorded video. My role in this project was the 'leader' as I   
+            <br> consistenly organized team meetings, created the graphs, made the powerpoint, 
+            <br> and edited the video.
+          </p> 
+        </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
       </tr>
       <tr>
         <td> Chain Expansion </td>
         <td> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link4" /> </td>
-      </tr>
+      </tr> <p> A fun marble solitaire game with three different board shapes to chose from.
+           <br> 
+      </p> 
       <tr>
         <td> Country Study </td> 
         <td> </td>
