Added class names

--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
         <th class= "header3"> Link to Project </th> 
       </tr>
       <tr>
-        <td> Marble Solitaire </td>
+        <td> Marble Solitaire <br> <em> Object Oriented Design </em> </td>
         <td> <p> A fun marble solitaire game with three different board shapes to chose from. 
             <br> The shapes are English, European, and Triangle. If you would like to play a 
             <br> game, simply download the code and create a configuration. The format should 
@@ -33,7 +33,7 @@
         <td align= "center"> <img src= "images/Link.png" alt= "Link1" onclick= "https://github.com/Meixia-S/Marble-Solitaire-Game" /> </td>
       </tr> 
       <tr> 
-        <td> Image Processor </td>
+        <td> Image Processor <br> <em> Object Oriented Design </em> </td>
         <td> <p> This is a image processor program that allows you load, edit, and save 
             <br> images (supports: jpg, png, bmp, ppm3). There are three different ways to 
             <br> use the program: 1. through the shell via text commands
@@ -50,7 +50,7 @@
         <td align= "center"> <img src= "images/Link.png" alt= "Link2" onclick= "https://github.com/Meixia-S/Image-Processor" /> </td>
       </tr> 
       <tr>
-        <td> China's Economy </td>
+        <td> China's Economy <br> <em> Macroeconomics </em> </td>
         <td> <p> This project focus was to research another country's macro economy, convert 
             <br> data into graphs, and analize those graphs to determine the strenghts and 
             <br> weaknesses of their ecnomy. This project was done in stages during the 
@@ -64,14 +64,15 @@
         <td align= "center"> <img src= "images/Link.png" alt= "Link3" /> </td>
       </tr>
       <tr>
-        <td> Chain Expansion </td>
-        <td> </td>
+        <td> Chain Expansion <br> <em> International Business </em> </td>
+        <td> <p> A fun marble solitaire game with three different board shapes to chose from.
+            <br> 
+          </p> 
+        </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link4" /> </td>
-      </tr> <p> A fun marble solitaire game with three different board shapes to chose from.
-           <br> 
-      </p> 
+      </tr> 
       <tr>
-        <td> Country Study </td> 
+        <td> Country Study  <br> <em> International Business </em> </td> 
         <td> </td>
         <td align= "center"> <img src= "images/Link.png" alt= "Link5" /> </td>
       </tr> 
